bins/havenc/tests/cases/fail/test_enum_data_bare_variant.hv
//@ error: carries a payload
// a tuple variant used bare (no `(...)`) is a missing constructor call.
enum Msg { Stop, Note(u8, f32) }

@export
proc main() i32 {
    let m: Msg = Msg::Note;
    return 0;
}
